# acovea-gtk

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in
src/: Makefile.am  Makefile.in  about_box.cc  about_box.hh  about_box_glade.cc  about_box_glade.hh  acovea-gtk.cc  main_window.cc  main_window.hh  main_window_glade.cc  main_window_glade.hh  settings_window.cc  settings_window.hh  settings_window_glade.cc  settings_window_glade.hh
