AC_PREREQ(2.50)
AC_INIT(acovea-gtk, 1.0.1, [scott.ladd@coyotegulch.com])
AM_INIT_AUTOMAKE
AC_CONFIG_HEADERS(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL

AC_LANG_CPLUSPLUS

PKG_CHECK_MODULES(GTKMM,[gtkmm-2.4 >= 2.4.8],,
	[PKG_CHECK_MODULES(GTKMM,[gtkmm-2.0 >= 2.0.0])])
AC_SUBST(GTKMM_CFLAGS)
AC_SUBST(GTKMM_LIBS)

AC_OUTPUT(Makefile src/Makefile )
